Refactored and modularized CSS

--- a/Odin/Content/css/forgotpassword.css
+++ b/Odin/Content/css/forgotpassword.css
@@ -113,7 +113,8 @@ div.container.body-content {
         color: #31A4DD; }
   div.container.body-content div#dwellworks {
     margin-top: 178px;
-    text-align: center; }
+    text-align: center;
+    padding-left: 0px; }
     div.container.body-content div#dwellworks.mailer {
       margin-top: 40px; }
     div.container.body-content div#dwellworks p {
