--- a/Odin/Content/css/forgotpassword.scss
+++ b/Odin/Content/css/forgotpassword.scss
@@ -1,4 +1,6 @@
-﻿
+﻿@import "shared/definitions";
+
+
 body {
     padding-top: 0px;
 
@@ -59,7 +61,7 @@ div.container.body-content {
             }
 
             p, span {
-                color: #31A4DD;
+                color: $OdinBlue;
             }
 
             div.form-group {
@@ -105,7 +107,7 @@ div.container.body-content {
 
                         a {
                             box-shadow: none;
-                            background-color: #4BAD48;
+                            background-color: $OdinGreen;
                             color: white;
                             width: 200px;
                             margin-top: 40px;
@@ -118,7 +120,7 @@ div.container.body-content {
                             float: left;
                             line-height: 18px;
                             box-shadow: none;
-                            background-color: #4BAD48;
+                            background-color: $OdinGreen;
                             color: white;
                             margin-right: 10px;
                             text-transform: capitalize;
@@ -156,38 +158,11 @@ div.container.body-content {
             }
 
             span#email, span#pw {
-                color: #31A4DD;
+                color: $OdinBlue;
             }
         }
     }
 
-    div#dwellworks {
-        margin-top: 178px;
-        text-align: center;
-
-        &.mailer {
-            margin-top: 40px;
-        }
-
-        p {
-            display: inline-block;
-
-            &:first-of-type {
-                border-left: 1px solid gray;
-                margin-left: 4px;
-                top: -2px;
-                height: 21px;
-                position: relative;
-            }
-
-            &:last-of-type {
-                top: -3px;
-                font-size: large;
-                color: #4BAD48;
-                font-size: 20px;
-                font-family: sans-serif;
-            }
-        }
-    }
+    @include logo(178px);
 }
 
