--- a/Odin/Views/Account/ForgotPassword.cshtml
+++ b/Odin/Views/Account/ForgotPassword.cshtml
@@ -36,11 +36,7 @@
             </div>
         }
 
-        <div id="dwellworks">
-            <img src="~/Content/Images/dwellworks_icon.png" />
-            <p>&nbsp;</p>
-            <p>Odin</p>
-        </div>
+        @Html.Partial("~/Views/Shared/Partials/_logo.cshtml")
     </div>
 </div>
 
