--- a/Odin/Views/Account/Login.cshtml
+++ b/Odin/Views/Account/Login.cshtml
@@ -40,11 +40,7 @@
                 </div>                
             }
         </section>
-        <div id="dwellworks">
-            <img src="~/Content/Images/dwellworks_icon.png" />
-            <p>&nbsp;</p>
-            <p>Odin</p>
-        </div>
+        @Html.Partial("~/Views/Shared/Partials/_logo.cshtml")
     </div>
     <div class="col">
         <img src="~/Content/Images/bg_image.png"/>
