--- a/Odin/Views/Mailers/ResetPassword.cshtml
+++ b/Odin/Views/Mailers/ResetPassword.cshtml
@@ -8,11 +8,7 @@
     <div class="row">
         <div class="col mailer">
 
-            <div id="dwellworks" class="mailer">
-                <img src="~/Content/Images/dwellworks_icon.png" />
-                <p>&nbsp;</p>
-                <p>Odin</p>
-            </div>
+            @Html.Partial("~/Views/Shared/Partials/_logo2.cshtml")
 
             @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
