--- a/Odin/Content/css/login.css
+++ b/Odin/Content/css/login.css
@@ -77,13 +77,16 @@ div.container.body-content {
       box-shadow: none;
       margin-bottom: 5px;
       line-height: 10px;
-      background-color: #48AD48;
+      background-color: #4BAD48;
       text-transform: capitalize; }
   div.container.body-content p#forgot {
     text-align: center; }
   div.container.body-content div#dwellworks {
     margin-top: 196px;
-    text-align: center; }
+    text-align: center;
+    padding-left: 0px; }
+    div.container.body-content div#dwellworks.mailer {
+      margin-top: 40px; }
     div.container.body-content div#dwellworks p {
       display: inline-block; }
       div.container.body-content div#dwellworks p:first-of-type {
