--- a/Odin/Content/css/login.scss
+++ b/Odin/Content/css/login.scss
@@ -1,4 +1,6 @@
-﻿
+﻿@import "shared/definitions";
+
+
 body {
     padding-top: 0px;
 }
@@ -31,7 +33,7 @@ div.container.body-content {
             margin-bottom: 97px;
 
             span#Odin {
-                color: #4BAD48;
+                color: $OdinGreen;
             }
         }
     }
@@ -117,7 +119,7 @@ div.container.body-content {
                 box-shadow: none;
                 margin-bottom: 5px;
                 line-height: 10px;
-                background-color: #48AD48;
+                background-color: $OdinGreen;
                 text-transform: capitalize;
             }
         }
@@ -127,29 +129,6 @@ div.container.body-content {
         text-align: center;
     }
 
-    div#dwellworks {
-        margin-top: 196px;
-        text-align: center;
-
-        p {
-            display: inline-block;
-
-            &:first-of-type {
-                border-left: 1px solid gray;
-                margin-left: 4px;
-                top: -2px;
-                height: 21px;
-                position: relative;
-            }
-
-            &:last-of-type {
-                top: -3px;
-                font-size: large;
-                color: #4BAD48;
-                font-size: 20px;
-                font-family: sans-serif;
-            }
-        }
-    }
+    @include logo(196px);
 }
 
