--- a/Odin/Views/Shared/_Common.cshtml
+++ b/Odin/Views/Shared/_Common.cshtml
@@ -9,32 +9,8 @@
  </head>
 <body>
     <div class="container body-content">
-        <div id="main">
-            <div id="caption">
-                <img src="~/Content/Images/dwellworks_icon.png" />
-                <p>&nbsp;</p>
-                <p>Odin</p>
-            </div>
-            <div id="icons">
-                <div class="icons_notify icons_notify_messages">
-                    <span>10</span>
-                </div>
-                <div class="icons_notify icons_notify_alerts">
-                    <span>1</span>
-                </div>
-                <div class="icons_notify icons_notify_appts">
-                    <span>1</span>
-                </div>
-                <div>
-                    <img src="~/Content/Images/icn_chat_1.png">
-                    <img src="~/Content/Images/icn_profile.png" />
-                    <img src="~/Content/Images/icn_note_1.png" />
-                    <img src="~/Content/Images/icn_cal_1.png" />
-                </div>
-            </div>
-            @RenderBody()
-         </div>
-        <hr />
+        @Html.Partial("~/Views/Shared/Partials/_header.cshtml")
+        @RenderBody()
     </div>
 
     @Scripts.Render("~/bundles/lib")
