Added more integration tests. Fixed verbiage on forgot password.

--- a/Odin/Views/Account/ForgotPassword.cshtml
+++ b/Odin/Views/Account/ForgotPassword.cshtml
@@ -26,7 +26,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Send" class="btn btn-default" /><span>Send a test email to me now!</span>
+                        <input type="submit" value="Send" class="btn btn-default" /><span>Send a reset email to me now!</span>
                     </div>
                     <br />
                     <div id="desc">
