--- a/Odin/Views/Shared/_Common.cshtml
+++ b/Odin/Views/Shared/_Common.cshtml
@@ -8,7 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
  </head>
 <body>
-    <div class="container body-content">
+    <div class="container-fluid">
         @Html.Partial("~/Views/Shared/Partials/_header.cshtml")
         @RenderBody()
     </div>
