Landing page adjust to latest mockup and connected to transferee page

--- a/Odin/Content/css/forgotpassword.css
+++ b/Odin/Content/css/forgotpassword.css
@@ -43,7 +43,7 @@ div.container.body-content {
       div.container.body-content div.col div#group-blk.mailer {
         padding-top: 0px; }
       div.container.body-content div.col div#group-blk p, div.container.body-content div.col div#group-blk span {
-        color: #31A4DD; }
+        color: #31a4dd; }
       div.container.body-content div.col div#group-blk div.form-group {
         padding-left: 15px;
         padding-right: 15px; }
@@ -110,7 +110,7 @@ div.container.body-content {
         line-height: 22px;
         margin-top: 14px; }
       div.container.body-content div.col div#caption span#email, div.container.body-content div.col div#caption span#pw {
-        color: #31A4DD; }
+        color: #31a4dd; }
   div.container.body-content div#dwellworks {
     margin-top: 178px;
     text-align: center;
