--- a/Odin/Content/css/login.scss
+++ b/Odin/Content/css/login.scss
@@ -33,7 +33,7 @@ div.container.body-content {
             margin-bottom: 97px;
 
             span#Odin {
-                color: $OdinGreen;
+                color: $DW_Green;
             }
         }
     }
@@ -119,7 +119,7 @@ div.container.body-content {
                 box-shadow: none;
                 margin-bottom: 5px;
                 line-height: 10px;
-                background-color: $OdinGreen;
+                background-color: $DW_Green;
                 text-transform: capitalize;
             }
         }
