--- a/Odin/Views/Shared/Partials/_header.cshtml
+++ b/Odin/Views/Shared/Partials/_header.cshtml
@@ -4,19 +4,22 @@
     </div>
     <div id="icons">
         <div class="icons_notify icons_notify_messages">
+            <img src="~/Content/Images/icn_alert_circle.png" />
             <span>10</span>
         </div>
-        <div class="icons_notify icons_notify_alerts">
-            <span>1</span>
-        </div>
         <div class="icons_notify icons_notify_appts">
-            <span>1</span>
-        </div>
+                <img src="~/Content/Images/icn_alert_circle.png" />
+                <span>01</span>
+            </div>
+        <div class="icons_notify icons_notify_alerts">
+                <img src="~/Content/Images/icn_alert_circle.png" />
+                <span>01</span>
+            </div>
         <div>
-            <img src="~/Content/Images/icn_chat_1.png">
-            <img src="~/Content/Images/icn_profile.png" />
-            <img src="~/Content/Images/icn_note_1.png" />
-            <img src="~/Content/Images/icn_cal_1.png" />
+            <img src="~/Content/Images/icn_profile_B1.png" />
+            <img class="icons_notify" src="~/Content/Images/icn_alert_B1.png" />
+            <img class="icons_notify" src="~/Content/Images/icn_cal_B1.png" />
+            <img class="icons_notify" src="~/Content/Images/icn_chat_B1.png">
         </div>
     </div>
 </div>
