--- a/Odin/Content/css/forgotpassword.scss
+++ b/Odin/Content/css/forgotpassword.scss
@@ -61,7 +61,7 @@ div.container.body-content {
             }
 
             p, span {
-                color: $OdinBlue;
+                color: $DW_Blue;
             }
 
             div.form-group {
@@ -107,7 +107,7 @@ div.container.body-content {
 
                         a {
                             box-shadow: none;
-                            background-color: $OdinGreen;
+                            background-color: $DW_Green;
                             color: white;
                             width: 200px;
                             margin-top: 40px;
@@ -120,7 +120,7 @@ div.container.body-content {
                             float: left;
                             line-height: 18px;
                             box-shadow: none;
-                            background-color: $OdinGreen;
+                            background-color: $DW_Green;
                             color: white;
                             margin-right: 10px;
                             text-transform: capitalize;
@@ -158,7 +158,7 @@ div.container.body-content {
             }
 
             span#email, span#pw {
-                color: $OdinBlue;
+                color: $DW_Blue;
             }
         }
     }
