--- a/Odin/Content/css/orders.css
+++ b/Odin/Content/css/orders.css
@@ -1,5 +1,7 @@
 ﻿body {
   padding: 0px; }
+  body div.container-fluid {
+    padding: 0px; }
 
 div#main div#caption {
   width: 48%;
@@ -41,35 +43,51 @@ div#main div#icons {
     display: inline-block; }
     div#main div#icons div.icons_notify {
       font-size: small;
-      color: #31A4DD;
+      color: white;
       position: relative;
       font-weight: bold;
       display: inline-block;
       width: 10px;
       text-align: center; }
+      div#main div#icons div.icons_notify img {
+        width: 26px; }
       div#main div#icons div.icons_notify.icons_notify_messages {
-        top: 6px;
-        left: -45px; }
+        top: -2px;
+        left: -321px; }
+        div#main div#icons div.icons_notify.icons_notify_messages span {
+          position: relative;
+          top: -33px;
+          left: -19px; }
       div#main div#icons div.icons_notify.icons_notify_alerts {
-        top: 6px;
-        left: -145px; }
+        top: -2px;
+        left: -104px; }
+        div#main div#icons div.icons_notify.icons_notify_alerts span {
+          position: relative;
+          top: -33px;
+          left: -17px; }
       div#main div#icons div.icons_notify.icons_notify_appts {
-        top: 6px;
-        left: -188px; }
+        top: -2px;
+        left: -204px; }
+        div#main div#icons div.icons_notify.icons_notify_appts span {
+          position: relative;
+          top: -33px;
+          left: -18px; }
     div#main div#icons div img {
       float: right;
-      width: 40px;
+      width: 50px;
       margin: 8px; }
+      div#main div#icons div img.icons_notify {
+        margin-right: 40px; }
 
 div#list {
   height: auto;
   padding-bottom: 45px;
   border-top: 1px solid #979797; }
   div#list div#search {
-    height: 60px;
-    padding-top: 15px;
+    height: 72px;
+    padding-top: 21px;
     padding-left: 43px;
-    background-color: #FAFAFA; }
+    background-color: #a7ce39; }
     div#list div#search input {
       width: 300px;
       max-width: none; }
@@ -78,8 +96,9 @@ div#list {
       color: white;
       height: 30px;
       border: none;
+      font-size: 15px;
       margin-left: 15px;
-      background-color: #49ae44; }
+      background-color: #31a4dd; }
   div#list img.arrow {
     cursor: cell; }
   div#list img.expand {
@@ -90,19 +109,31 @@ div#list {
     display: none; }
   div#list th {
     border: none;
+    line-height: 23px;
+    padding-left: 5px;
+    padding-right: 5px;
     padding-bottom: 16px; }
-    div#list th.first {
-      padding-left: 73px; }
-    div#list th.third {
-      padding-left: 55px; }
-    div#list th.fourth {
-      padding-left: 28px; }
-    div#list th.fifth {
+    div#list th p {
+      color: black;
+      height: 22px;
+      font-size: 23px;
+      margin-top: 55px;
+      font-family: sans-serif;
+      margin-bottom: 32px; }
+    div#list th.first div {
+      padding-left: 48px; }
+    div#list th.second {
+      padding-top: 25px; }
+    div#list th.third div {
+      padding-left: 68px; }
+    div#list th.fourth div {
+      padding-left: 34px; }
+    div#list th.fifth div {
       padding-left: 23px; }
-    div#list th.sixth {
-      padding-left: 41px; }
-    div#list th.seventh {
-      padding-left: 7px; }
+    div#list th.sixth div {
+      padding-left: 51px; }
+    div#list th.seventh div {
+      padding-left: 44px; }
   div#list td {
     border: none;
     white-space: nowrap;
@@ -110,20 +141,24 @@ div#list {
     div#list td span.srchIndx {
       color: #49ae44; }
     div#list td:nth-child(2) {
-      width: 160px; }
+      width: 284px;
+      padding-left: 5px; }
+    div#list td:last-of-type {
+      padding-top: 10px;
+      padding-left: 40px; }
     div#list td div.actlist-item-hdr {
       display: inline-block;
-      width: 30px; }
+      width: 68px; }
       div#list td div.actlist-item-hdr a {
         top: -10px;
         color: #6C6E70;
         position: relative;
-        font-size: 16px;
+        font-size: 20px;
         text-decoration: underline;
         font-family: sans-serif;
         margin-left: 3px; }
       div#list td div.actlist-item-hdr:first-of-type {
-        width: 22px;
+        width: 25px;
         margin-top: 5px;
         vertical-align: top; }
       div#list td div.actlist-item-hdr:nth-child(2) a {
@@ -137,35 +172,60 @@ div#list {
       width: 40px; }
     div#list td div.notify-count {
       font-size: small;
-      color: #31A4DD;
+      color: white;
       position: relative;
-      left: -17px;
-      top: -7px;
+      left: -22px;
+      top: -14px;
       font-weight: bold;
       display: inline-block;
       width: 10px;
       text-align: center; }
+      div#list td div.notify-count img {
+        width: 26px; }
+      div#list td div.notify-count span {
+        top: 1px;
+        left: -21px;
+        position: relative; }
     div#list td p.Callout, div#list td span.Callout {
-      color: #31A4DD;
+      color: #31a4dd;
+      font-weight: bold;
       margin-bottom: 0; }
-    div#list td p:first-child {
-      margin-bottom: 0px;
-      font-size: 20px;
-      font-weight: 500;
-      font-family: sans-serif; }
-      div#list td p:first-child.actlist-item {
-        color: #49ae44;
-        font-size: 16px;
+    div#list td p {
+      font-size: 20px; }
+      div#list td p.company {
+        margin-bottom: 0px; }
+      div#list td p.urgent {
+        color: #e53c2e;
+        font-weight: bold;
+        font-style: italic;
+        margin-bottom: 0px; }
+      div#list td p:first-child {
+        margin-bottom: 0px;
+        font-size: 22px;
+        font-weight: bold;
         font-family: sans-serif; }
-    div#list td p:nth-child(2) {
-      font-size: 16px;
-      line-height: 10px;
-      font-family: sans-serif; }
+        div#list td p:first-child.transferee {
+          color: #8d0b56; }
+        div#list td p:first-child.lastcontacted {
+          font-weight: normal; }
+        div#list td p:first-child.pretrip {
+          font-weight: normal; }
+        div#list td p:first-child.finalarrival {
+          font-weight: normal; }
+        div#list td p:first-child.actlist-item {
+          color: #49ae44;
+          font-size: 20px;
+          font-family: sans-serif; }
+      div#list td p:nth-child(2) {
+        line-height: 10px;
+        font-family: sans-serif; }
+        div#list td p:nth-child(2).managerphone {
+          font-weight: normal; }
   div#list table {
     width: 96%;
     margin: 30px 40px 0px 40px; }
     div#list table tbody tr:hover {
-      background-color: #31A4DD; }
+      background-color: #b7a998; }
 
 @media screen and (min-width: 993px) {
   table.tablet {
@@ -173,18 +233,23 @@ div#list {
   table.mobile {
     display: none; } }
 
-@media screen and (min-width: 800px) and (max-width: 992px) {
+@media screen and (min-width: 813px) and (max-width: 992px) {
   table.desktop {
     display: none; }
-  div#icons div.icons_notify.icons_notify_messages {
-    top: 6px;
-    left: -44px; }
   th.second {
-    padding-left: 29px !important; }
+    padding-top: 0px !important; }
+    th.second div {
+      padding-left: 38px !important; }
+  th.third div {
+    padding-left: 52px !important; }
   th.fourth {
-    padding-left: 0px !important; }
-  th.fifth {
-    padding-left: 9px !important; }
+    padding-top: 25px; }
+  th.fifth div {
+    padding-left: 46px !important; }
+  td:nth-child(2) {
+    width: 200px !important; }
+  td:nth-child(3) {
+    width: 160px !important; }
   td div.actlist-item-hdr {
     display: block !important; }
     td div.actlist-item-hdr:nth-child(2) {
@@ -199,7 +264,7 @@ div#list {
   td div.actlist-item-blk {
     margin-left: 0px !important; }
   td span {
-    font-size: 14px;
+    font-size: 16px;
     font-family: sans-serif; }
     td span.tablet-column-label {
       color: #6C6E70;
@@ -208,7 +273,7 @@ div#list {
   table.mobile {
     display: none; } }
 
-@media screen and (max-width: 799px) {
+@media screen and (max-width: 812px) {
   table.desktop {
     display: none; }
   table.tablet {
@@ -232,107 +297,27 @@ div#list {
     div#icons div {
       float: none !important; }
   div#icons div.icons_notify.icons_notify_messages {
-    top: -32px !important;
-    left: 239px !important; }
+    top: -14px !important;
+    left: 96px !important; }
   div#icons div.icons_notify.icons_notify_alerts {
-    top: -32px !important;
-    left: 117px !important; }
+    top: -14px !important;
+    left: 265px !important; }
   div#icons div.icons_notify.icons_notify_appts {
-    top: -32px !important;
-    left: 50px !important; }
+    top: -14px !important;
+    left: 190px !important; }
   th.second {
-    padding-left: 54px !important; }
-  th.third {
-    padding-left: 9px !important; }
+    padding-top: 0px !important; }
+    th.second div {
+      padding-left: 71px !important; }
+  th.third div {
+    padding-left: 47px !important; }
   td span {
-    font-size: 14px;
+    font-size: 16px;
     font-family: sans-serif; }
+    td span div.actlist-item-hdr {
+      width: 48px; }
     td span.tablet-column-label {
       color: #6C6E70;
       font-weight: 600;
       margin-right: 4px; } }
-
-@media screen and (max-width: 483px) {
-  table.desktop {
-    display: none; }
-  table.tablet {
-    display: none; }
-  table.mobile {
-    margin-left: 0 !important; }
-  div#caption {
-    height: 66px !important;
-    padding-top: 20px !important;
-    text-align: center;
-    width: 90% !important;
-    display: block !important; }
-    div#caption div#dwellworks {
-      text-align: center !important; }
-  div#icons {
-    height: 70px !important;
-    text-align: center;
-    padding-top: 0px !important;
-    float: none !important;
-    width: 90% !important;
-    display: block !important;
-    margin-bottom: 0px; }
-    div#icons div {
-      float: none !important; }
-  th.second {
-    padding-left: 54px !important; }
-  th.third {
-    padding-left: 9px !important; }
-  td span {
-    font-size: 14px;
-    font-family: sans-serif; }
-    td span.tablet-column-label {
-      color: #6C6E70;
-      font-weight: 600;
-      margin-right: 4px; }
-  div#search {
-    margin-left: 0px !important; }
-    div#search input {
-      width: 230px !important; } }
-
-@media screen and (max-width: 365px) {
-  table.desktop {
-    display: none; }
-  table.tablet {
-    display: none; }
-  table.mobile {
-    margin-left: 0 !important; }
-  div#caption {
-    height: 66px !important;
-    padding-top: 20px !important;
-    text-align: center;
-    width: 90% !important;
-    display: block !important; }
-    div#caption div#dwellworks {
-      text-align: center !important; }
-  div#icons {
-    height: 70px !important;
-    text-align: center;
-    padding-top: 0px !important;
-    float: none !important;
-    width: 90% !important;
-    display: block !important;
-    margin-bottom: 0px; }
-    div#icons div {
-      float: none !important; }
-  th.second {
-    padding-left: 54px !important; }
-  th.third {
-    padding-left: 9px !important; }
-  td span {
-    font-size: 14px;
-    font-family: sans-serif; }
-    td span.tablet-column-label {
-      color: #6C6E70;
-      font-weight: 600;
-      margin-right: 4px; }
-  div#search {
-    margin-left: 0px !important; }
-    div#search input {
-      width: 230px !important; }
-    div#search button {
-      margin-left: 0px !important; } }
 
