--- a/Odin/Views/Orders/Index.cshtml
+++ b/Odin/Views/Orders/Index.cshtml
@@ -12,32 +12,49 @@
             <thead>
                 <tr>
                     <th class="first">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png"/>
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png"/>
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>Transferee</p>
                     </th>
                     <th class="second">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <p>Authorized Tasks</p>
                     </th>
                     <th class="third">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>Last Contacted</p>
                     </th>
                     <th class="fourth">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>Manager</p>
                     </th>
                     <th class="fifth">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>PreTrip</p>
                     </th>
                     <th class="sixth">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>Final Arrival</p>
                     </th>
                     <th class="seventh">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>Notification</p>
                     </th>
                 </tr>
             </thead>
@@ -48,24 +65,35 @@
             <thead>
                 <tr>
                     <th class="first">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>Transferee</p>
                     </th>
                     <th class="second">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>Manager</p>
                     </th>
                     <th class="third">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>Last Contacted</p>
                     </th>
                     <th class="fourth">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <p>Authorized Tasks</p>
                     </th>
                     <th class="fifth">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>Notification</p>
                     </th>
                 </tr>
             </thead>
@@ -76,16 +104,25 @@
             <thead>
                 <tr>
                     <th class="first">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>Transferee</p>
                     </th>
                     <th class="second">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>Last Contacted</p>
                     </th>
                     <th class="third">
-                        <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                        <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        <div>
+                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                        </div>
+                        <p>Notification</p>
                     </th>
                 </tr>
             </thead>
