Added toast to forgot password. Fixed validation styles.

--- a/Odin/Content/ForgotPassword/forgotpassword.css
+++ b/Odin/Content/ForgotPassword/forgotpassword.css
@@ -13,6 +13,9 @@
       opacity: 0.7;
       position: fixed; }
 
+.text-danger ul {
+  list-style-type: none; }
+
 div.container.body-content {
   top: 0px;
   width: 100%;
