--- a/Odin/Views/Mailers/ResetPassword.cshtml
+++ b/Odin/Views/Mailers/ResetPassword.cshtml
@@ -12,7 +12,7 @@
         <div class="row">
             <div style="width: 626px; margin:auto; text-align:center; padding-top:5px; margin-top:80px; padding-bottom:12px; background-color:white; border:1px solid;" class="col mailer">
                 <div id="dwellworks" class="mailer" style="margin-top: 40px;text-align:center;display:block">
-                    <img src=@Server.MapPath("~/Content/Images/dwellworks_icon.png") style="vertical-align:middle;text-align:center;border:0">
+                    <img src=@Url.Content("~/Content/Images/dwellworks_icon.png", true) style="vertical-align:middle;text-align:center;border:0">
                     <p style="border-left: 1px solid gray;margin-left: 4px;top:-2px;height: 21px;position:relative;display:inline-block;line-height:1.846;margin: 0 0 1em;">&nbsp;</p>
                     <p style="top:-3px;color:#4bad48;font-size:20px;font-family:sans-serif;line-height:1.846;display:inline-block;margin: 0 0 1em;text-align:center;letter-spacing:0.1px">Odin</p>
                 </div>
