--- a/Odin/Views/Account/ForgotPassword.cshtml
+++ b/Odin/Views/Account/ForgotPassword.cshtml
@@ -45,7 +45,7 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/bundles/forgotPassword")
+    @Scripts.Render("~/Scripts/forgotPassword")
     <script>
         $(document).ready(ForgotPasswordController.init);
     </script>
