--- a/Odin/Content/css/transferee/intake.scss
+++ b/Odin/Content/css/transferee/intake.scss
@@ -2,4 +2,68 @@
 
 
 div#intake {
+    padding-top: 30px;
+    padding-left: 50px;
+
+    div.row {
+        text-align: left;
+    }
+
+    .intake-title {
+        padding-bottom: 30px;
+    }
+
+    hr {
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+
+    .intake-blue {
+        color: $DW_Blue;
+    }
+
+    .intake-lime {
+        color: $DW_Lime;
+    }
+
+    .intake-block {
+        padding-top: 35px;
+        padding-bottom: 35px;
+
+        .intake-header {            
+            h5{
+                margin-top:0px
+            }
+
+            span {
+                font-size: small;
+                color: $DW_Lime;
+                cursor: pointer;
+            }
+        }
+
+        .intake-row {
+
+            padding-top:15px;
+
+            .intake-col {
+                label {
+                    display: block;
+                    font-size: medium;
+                    margin-bottom: -5px;
+                }
+
+                span {
+                    color: $DW_Blue;
+                    font-size: small;
+                }
+
+                input {
+                    color: $DW_Blue;
+                    font-size: small;
+                    display: none;
+                }
+            }
+        }
+    }
 }
