--- a/Odin/Views/Orders/Transferee.cshtml
+++ b/Odin/Views/Orders/Transferee.cshtml
@@ -9,14 +9,14 @@
         <p>Victoria A. Sporer</p>
         <ul>
             <li class="unselectable">&nbsp;</li>
-            <li class="item selected" data-panel="intake">Intake</li>
-            <li class="item" data-panel="details">Details</li>
-            <li class="item" data-panel="rentals">Rentals</li>
-            <li class="item" data-panel="history">History</li>
+            <li class="item selected" data-panel="intake"><img src="~/Content/Images/icn_intake.png"/><span>Intake</span></li>
+            <li class="item" data-panel="details"><img src="~/Content/Images/icn_details.png"/><span>Details</span></li>
+            <li class="item" data-panel="rentals"><img src="~/Content/Images/icn_rentals.png"/><span>Rentals</span></li>
+            <li class="item" data-panel="history"><img src="~/Content/Images/icn_history.png"/><span>History</span></li>
             <li class="unselectable">&nbsp;</li>
             <li class="unselectable">&nbsp;</li>
-            <li class="item" data-panel="messages">Messages</li>
-            <li class="item" data-panel="calendar">Calendar</li>
+            <li class="item" data-panel="messages"><img src="~/Content/Images/icn_internal_messages.png"/><span>Messages</span></li>
+            <li class="item" data-panel="calendar"><img src="~/Content/Images/icn_internal_calendar.png"/><span>Calendar</span></li>
         </ul>
     </div>
     <div class="col">
