--- a/Odin/Content/css/shared/_definitions.scss
+++ b/Odin/Content/css/shared/_definitions.scss
@@ -100,6 +100,51 @@ $DW_Purple: #621f65;
     }
 }
 
+@mixin mobile_header() {
+    div#caption {
+        height: 66px !important;
+        padding-top: 20px !important;
+        text-align: center;
+        width: 90% !important;
+        display: block !important;
+
+        div#dwellworks {
+            text-align: center !important;
+        }
+    }
+
+    div#icons {
+        height: 70px !important;
+        text-align: center;
+        padding-top: 0px !important;
+        float: none !important;
+        width: 90% !important;
+        display: block !important;
+        margin-bottom: 0px;
+
+        div {
+            float: none !important;
+
+            &.icons_notify {
+                &.icons_notify_messages {
+                    top: -14px !important;
+                    left: 96px !important;
+                }
+
+                &.icons_notify_alerts {
+                    top: -14px !important;
+                    left: 265px !important;
+                }
+
+                &.icons_notify_appts {
+                    top: -14px !important;
+                    left: 190px !important;
+                }
+            }
+        }
+    }
+}
+
 @mixin logo($topMargin, $align: center, $padleft: 0px) {
     
     div#dwellworks {
